--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+
+<%- include('../partials/header');%>
+
 <body>
     
-</body>
+    <form action="/login" method="POST" class="w-75 p-5 mb-5 bg-light text-dark rounded" style="max-width: 450px;">
+        <!-- Email input -->
+      <h2 class="d-flex justify-content-center fw-bold" style="font-family: 'Poppins', sans-serif; font-size: 2 rem; line-height: 2.75394rem; letter-spacing: -0.08813rem;">
+            Sign in to Planet
+          </h2>
+
+          <div class="form-outline mb-4 mt-3">
+            <input type="button" id="googlebutton" name="" class=" form-control-lg border-0" style="width: 100%; height: 48px;" value="Google" />
+          </div>
+          <p class="d-flex justify-content-center text-secondary">or</p>
+        <div class="form-outline mb-4">
+
+          <input type="email" name="email" id="form2Example1" placeholder="Email" class="form-control-lg h-10  border-0 " style="width: 100%; height: 48px;" />
+        
+        </div>
+      
+        <!-- Password input -->
+        <div class="form-outline mb-4">
+          <input type="password" name="password" id="form2Example2" placeholder="password" class="bg-light form-control-lg border-0" style="width: 100%; height: 48px;" />
+        </div>
+        <!-- 2 column grid layout for inline styling -->
+        <div class="row mb-4">
+        
+          <div class="col">
+            <!-- Simple link -->
+            <a class="d-flex justify-content-end text-decoration-none text-primary" href="#!">Forgot password?</a>
+          </div>
+        </div>
+      
+        <!-- Submit button -->
+        <button type="submit" class="btn rounded-lg btn-dark w-100 btn-block mb-4">Sign in</button>
+      
+        <!-- Register buttons -->
+        <div class="text-center">
+          <p>Create New Account ? <a class="text-dark text-decoration-none" href="/signup">Sign Up</a></p>
+        </div>
+      </form>
+</body>   
 </html>
