--- a/views/partials/newArrivals.ejs
+++ b/views/partials/newArrivals.ejs
@@ -7,20 +7,27 @@
                    <a href="/products/<%= product._id %>">
                     <div class="post-slide">
                         <div class="post-img ml-3">
-                            <img  src="<%= product.productImages[0].secure_url %>" alt="product Image">
-                            <a href="/products/<%= product._id %>" class="over-layer"><i class="fa fa-link"></i></a>
+                          <img src="<%= product.productImages[0].secure_url %>" alt="product Image">
+                          <a href="/products/<%= product._id %>" class="over-layer"><i class="fa fa-link"></i></a>
                         </div>
-                        <div class="post-content">
+                        <div class="post-content d-flex align-items-center">
+                          <div class="d-flex flex-column">
                             <h3 class="post-title mt-3">
-                                <a href="#"><%= product.productTitle %></a>
+                              <a href="#"><%= product.productTitle %></a>
                             </h3>
                             <span class="post-date">$ <%= product.productPrice %></span>
-                            <a href="#" class="read-more">Add to Cart</a>
+                          </div>
+                          <div class="ml-auto">
+                            <button class="btn btn-dark addToCartBtn" product-id ="<%= product._id %>" >Add to cart</button>
+                          </div>
                         </div>
-                    </div>
+                      </div>
+                      
                    </a>
                   <% }); %>
             </div>
         </div>
     </div>
 </div>
+
+<script src="../js/cart.js"></script>
