--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -21,6 +21,7 @@
               <th scope="col">Quantity</th>
               <th scope="col">Price</th>
               <th scope="col">Subtotal</th>
+              <th scope="col"></th>
             </tr>
           </thead>
           <tbody>
@@ -41,7 +42,8 @@
                   </div>
                 </td>
                 <td class="pt-4 productPrice" data-price="<%= cartItem.product.productPrice %>">$ <%= cartItem.product.productPrice %></td>
-                <td class="pt-4 subTotal" data-subtotal ="<%= cartItem.product.productPrice * cartItem.quantity %>">$ <%= cartItem.product.productPrice * cartItem.quantity %></td>
+                <td class="pt-4  subTotal" data-subtotal ="<%= cartItem.product.productPrice * cartItem.quantity %>">$ <%= cartItem.product.productPrice * cartItem.quantity %></td>
+                <td> <button class="deleteCartItem btn btn-danger mt-3" data-delete = "<%= cartItem._id %>" cart-id="<%= populatedCart._id %>" >Remove </button> </td>
               </tr>
             <% }); %>
           </tbody>
