--- a/views/partials/userProfile.ejs
+++ b/views/partials/userProfile.ejs
@@ -7,20 +7,16 @@
                 <form id="profileForm">
                     <div class="mb-3">
                         <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" name="name" value="<%= userData.name %>" disabled>
+                        <input type="text" class="form-control" id="name" name="name" value="<%= userData.name %>" required>
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" value="<%= userData.email %>" disabled>
+                        <input type="email" class="form-control" id="email" name="email" value="<%= userData.email %>" required>
                     </div>
                     <div class="mb-3">
                         <label for="phoneNumber" class="form-label">Phone Number</label>
-                        <input type="number" class="form-control" id="phoneNumber" name="phoneNumber" value="<%= userData.phone %>"
-                               pattern="[0-9]{10}" title="Please enter a 10-digit phone number" required>
+                        <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber" value="<%= userData.phone %>" required>
                     </div>
-                    
-                    
-                    
 
                      <input type="hidden" id="userId" name="userId" value="<%= userData._id %>">
 
