Done : wallet added

--- a/views/pages/checkout.ejs
+++ b/views/pages/checkout.ejs
@@ -153,17 +153,17 @@
               <ul class="nav nav-pills rounded nav-fill">
                   <li class="nav-item ">
                       <a data-toggle="pill" href="#credit-card" class="nav-link text-dark active btn btn-dark">
-                          <i class="fas fa-credit-card mr-2"></i> Online
+                          <i class="fas fa-mobile-alt mr-2"></i> Online
                       </a>
                   </li>
-                  <!-- <li class="nav-item">
-                      <a data-toggle="pill" href="#paypal" class="nav-link text-dark btn btn-dark">
-                          <i class="fab fa-paypal mr-2"></i> Paypal
+                  <li class="nav-item">
+                      <a data-toggle="pill" href="#wallet" class="nav-link text-dark btn btn-dark">
+                        <i class="fa-solid fa-wallet"></i> Wallet
                       </a>
-                  </li> -->
+                  </li>
                   <li class="nav-item">
                       <a data-toggle="pill" href="#COD" class="nav-link text-dark btn btn-dark">
-                          <i class="fas fa-mobile-alt mr-2"></i> COD
+                        <i class="fa-solid fa-money-bill-transfer"></i> COD
                       </a>
                   </li>
               </ul>
@@ -174,25 +174,17 @@
                   <!-- ****** CARD  ****** -->
                   <div id="credit-card" class="tab-pane fade show active">
                       <form role="form">
-                          <!-- <div class="form-group">
-                              <label for="username">Card Owner</label>
-                              <input type="text" name="username" placeholder="Card Owner Name" required class="form-control">
-                          </div> -->
-                          <!-- Expiration Date and CVV fields... -->
                           <button type="button" class="subscribe btn btn-dark btn-block shadow-sm confrimPayementBtn">Confirm Payment</button>
                       </form>
                   </div>
                   <!-- ****** END OF CARD  ****** -->
                   
                   <!-- ****** PAYPAL ****** -->
-                  <!-- <div id="paypal" class="tab-pane fade pt-3">
+                  <div id="wallet" class="tab-pane fade pt-3">
                     <form role="form">
-                      <div class="form-group">
-                        <h4>paypal account</h4>
-                      </div>
                       <button type="button" class="subscribe btn btn-dark btn-block shadow-sm confrimPayementBtn">Confirm Payment</button>
                   </form>
-                  </div> -->
+                  </div>
                   <!-- ****** END OF  PAYPAL ****** -->
 
                   <!-- ****** COD ****** -->
@@ -202,8 +194,6 @@
                           <!-- <label for="username">Card Owner</label>
                           <input type="text" name="username" placeholder="Card Owner Name" required class="form-control"> -->
                       </div>
-                      <!-- Expiration Date and CVV fields... -->
-                      <!-- <button type="button" class="subscribe btn btn-dark btn-block shadow-sm confrimPayementBtn">Confirm Payment</button> -->
                       <button type="button" class="subscribe btn btn-dark btn-block shadow-sm confrimPayementBtn">Confirm Payment</button>
                     </form>
                   </div>
