--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -25,6 +25,7 @@
   <a href="#address" class="text-dark">Address</a>
   <a href="#order" class="text-dark">Orders</a>
   <a href="#returns" class="text-dark">Returns</a>
+  <a href="#wallet" class="text-dark">Wallet</a>
   <button type="button" class="btn btn-danger ml-4 mt-1" data-bs-toggle="modal" data-bs-target="#logoutModal">Logout</button>
 </div>
 
@@ -33,6 +34,9 @@
   <%- include('../partials/userAddress');%>
   <%- include('../partials/userOrders');%>
   <%- include('../partials/userReturns');%>
+  <%- include('../partials/userWallet');%>
+
+
 </div>
 
 <script>
