Done : Admin Graph and stock

--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -8,8 +8,8 @@
   <%- include('../partials/navbar');%>
 </div>
 
-<div class="container">
-    <h2 class="d-flex justify-content-center mb-5">
+<div class="container ">
+    <h2 class="d-flex justify-content-center mb-5 mt-5">
      Cart
     </h2>
     <div class="table-responsive">
@@ -66,15 +66,11 @@
       </div>
 
       <div class="d-flex justify-content-center mt-1">
-        <p>Shop for <strong>$34</strong> more to enjoy FREE Shipping</p>
+        <p>Pay <strong>$15</strong> more to EXPRESS Shipping</p>
       </div>
 
       <div class="d-flex justify-content-center mt-5">
-        <div class="d-flex flex-column mr-5">
-            <p class="mb-1">Have a coupon?</p>
-            <p class="text-secondary mb-2">Add your code for an instant cart discount</p>
-            <input type="text" name="coupon" id="couponId" class="form-control mb-3" placeholder="Coupon code">
-        </div>
+       
         <div class="d-flex flex-column ml-5 border p-4 w-50">
             <div class="mb-3">
                 <input type="radio" class="shipping" name="shipping" id="freeShipping" value="FreeShipping">
