--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -27,7 +27,7 @@
         <a href="#banner" class="text-dark">Banner</a>
         <a href="#users" class="text-dark">Users</a>
         <a href="#orders" class="text-dark">Orders</a>
-        <a href="#enquiries" class="text-dark">Enquiries</a>
+        <a href="#coupon" class="text-dark">Coupons</a>
         <button type="button" class="btn btn-danger ml-4 mt-1" data-bs-toggle="modal" data-bs-target="#logoutModal"> Logout</button>
 
       </div>
@@ -48,6 +48,8 @@
        <%- include('../partials/category');%>
 
        <%- include('../partials/adminOrders');%>
+
+       <%- include('../partials/adminCoupon');%>
 
 
 
