--- a/views/partials/userWallet.ejs
+++ b/views/partials/userWallet.ejs
@@ -1,5 +1,5 @@
-<div id="wallet" class="contents">
-  <div class="container mt-5">
+<div id="wallet" class="contents " >
+  <div class="container mt-5 d-flex justify-content-center">
     <div class="card p-4 w-75">
       <h4 class="card-title">Your Wallet</h4>
 
