--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <!-- <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../style/style.css">
         <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'>
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
              
@@ -16,19 +15,22 @@
 
         <title>Document</title>
        
-    </head>
+    </head> -->
+    <%- include('../partials/header');%>
          
 <body>
     <%- include('../partials/navbar');%>
+      <!-- Display success message -->
 
       <div class="container">
-        <div class="d-flex mt-2">
+        <div class="d-flex mt-5">
           <div class="flex-shrink-0" style="width: 47.6875rem; height: 12.0625rem;">
             <p class="text-black-900" style="font-family: 'Space Grotesk'; font-size: 4rem; font-weight: 500; line-height: 4.75rem; letter-spacing: -0.125rem;">Plant your house with handmade love.</p>
           </div>
         </div>
-        <%- include('../partials/homeCarousel');%>
-     
+        
+          <%- include('../partials/homeCarousel');%>
+             
       </div>
       <div class="container mt-5">
       <h2 class="ml-5">New Arrivals</h2>
