--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -14,7 +14,7 @@
 <body>
     <%- include('../partials/navbar');%>
     
-    <div class="container mt-3">
+    <div class="container mt-5">
         <div class="row">
             <div class="col-md-6">
                 <div class="col-md-6">
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mt-5">
                 <div class="d-flex flex-column justify-content-between h-100">
                     <div>
                         <h2 class="mb-3"><%= product.productTitle %></h2>
