--- a/views/partials/adminAddProduct.ejs
+++ b/views/partials/adminAddProduct.ejs
@@ -1,6 +1,5 @@
 <div id="addProduct" class="contents">
-  
-  <div class="container">
+  <div class="container-fluid">
     <h2 class="mb-4">Add Product</h2>
     <form action="/admin/add-product" method="POST" enctype="multipart/form-data">
       <div class="mb-3">
