--- a/views/partials/adminUsers.ejs
+++ b/views/partials/adminUsers.ejs
@@ -1,4 +1,5 @@
-<div id="users" class="contents mt-4">
+<div id="users" class="contents mt-5">
+  <h2 class="container-fluid d-flex justify-content-center"><strong>Users</strong></h2>
     <form class="form-inline mb-4">
       <input class="form-control mr-2 w-25 d-flex justify-content-center" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-dark" type="submit">Search</button>
