--- a/views/partials/homeCarousel.ejs
+++ b/views/partials/homeCarousel.ejs
@@ -1,23 +1,23 @@
 <div class="main mt-2">
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner" style="max-height: 300px;"> <!-- Adjust the max-height value as needed -->
           <div class="carousel-item active">
-            <img src="../assets/diana-polekhina-Hzz7AEyLhZk-unsplash.jpg" class="d-block w-100" alt="...">
+              <img src="../assets/diana-polekhina-Hzz7AEyLhZk-unsplash.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../assets/tim-chow-9IcKPSQ9G5Q-unsplash.jpg" class="d-block w-100" alt="...">
+              <img src="../assets/tim-chow-9IcKPSQ9G5Q-unsplash.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../assets/corinne-kutz-7ZtPwmSKj6U-unsplash.jpg" class="d-block w-100" alt="...">
+              <img src="../assets/corinne-kutz-7ZtPwmSKj6U-unsplash.jpg" class="d-block w-100" alt="...">
           </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+      </button>
+  </div>
 </div>
