--- a/views/partials/adminAddProduct.ejs
+++ b/views/partials/adminAddProduct.ejs
@@ -1,7 +1,7 @@
 <div id="addProduct" class="contents">
   <div class="container-fluid">
     <h2 class="mb-4">Add Product</h2>
-    <form action="/admin/add-product" method="POST" enctype="multipart/form-data">
+    <form id="productForm" action="/admin/add-product" method="POST" enctype="multipart/form-data">
       <div class="mb-3">
         <label for="productTitle" class="form-label">Product Title</label>
         <input type="text" class="form-control" id="productTitle" name="productTitle" required>
@@ -15,10 +15,12 @@
         <div class="mb-3">
           <label for="productPrice" class="form-label">Product Price</label>
           <input type="number" class="form-control" id="productPrice" name="productPrice" step="0.01" required>
+          <p id="validatePrice" class="text-danger"></p>
         </div>
         <div class="mb-3" style="margin-left: 20px;"> <!-- Add margin to create a gap -->
           <label for="totalQuantity" class="form-label">Total Quanitity</label>
           <input type="number" class="form-control" id="totalQuantity" name="totalQuantity" step="0.01" required>
+          <p id="validateQuantity" class="text-danger"></p>
         </div>
         <div class="mb-3" style="margin-left: 20px;">
           <label class="form-label">Category</label>
@@ -29,7 +31,6 @@
               <% }); %>
           </select>
       </div>
-      
       </div>
     
       <div class="mb-3">
@@ -46,3 +47,5 @@
   </div>
 
 </div>
+
+<script src="../js/adminAddProduct.js"></script>
